--- a/.github/workflows/qa-and-build-arifact.yml
+++ b/.github/workflows/qa-and-build-arifact.yml
@@ -126,7 +126,7 @@ jobs:
 
       - name: build storybook
         working-directory: ./services/front/dev
-        run: storybook:build
+        run: yarn storybook:build
 
     needs: test
 
@@ -156,7 +156,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: nuxt-site
-          path: services/front/dev
+          path: services/front/dev/dist
 
       - name: Upload storybook site
         uses: actions/upload-artifact@v2
