--- a/.github/workflows/qa-and-build-arifact.yml
+++ b/.github/workflows/qa-and-build-arifact.yml
@@ -98,7 +98,7 @@ jobs:
 
     needs: setup
 
-  build:
+  build-upload:
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -120,43 +120,19 @@ jobs:
           path: ${{ github.workspace }}
           key: ${{ matrix.os }}-node-v${{ matrix.node }}-app-${{ github.sha }}
 
-      - name: build nuxt
+      - name: generate nuxt
         working-directory: ./services/front/dev
         run: yarn generate
-
-      - name: build storybook
-        working-directory: ./services/front/dev
-        run: yarn storybook:build
-
-    needs: test
-
-  artifact:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        node: [12]
-
-    steps:
-      - uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node }}
-
-      - name: checkout
-        uses: actions/checkout@master
-
-      - name: restore workspace cache
-        uses: actions/cache@v1
-        with:
-          path: ${{ github.workspace }}
-          key: ${{ matrix.os }}-node-v${{ matrix.node }}-app-${{ github.sha }}
 
       - name: Upload nuxt generate site
         uses: actions/upload-artifact@v2
         with:
           name: nuxt-site
           path: services/front/dev/dist
+
+      - name: build storybook
+        working-directory: ./services/front/dev
+        run: yarn storybook:build
 
       - name: Upload storybook site
         uses: actions/upload-artifact@v2
