ci(qa): アーティファクトのアップロードのタイミングでlintとtestを待つように変更

--- a/.github/workflows/qa-and-build-arifact.yml
+++ b/.github/workflows/qa-and-build-arifact.yml
@@ -140,4 +140,4 @@ jobs:
           name: storybook
           path: services/front/dev/storybook-static
 
-    needs: test
+    needs: [lint, test]
