--- a/.github/workflows/deploy-for-firbase-hosting.yaml
+++ b/.github/workflows/deploy-for-firbase-hosting.yaml
@@ -39,8 +39,4 @@ jobs:
 
       - name: Deploy nuxt generate to Firebase hosting
         working-directory: ./services/front/dev
-        uses: w9jds/firebase-action@master
-        with:
-          args: make deploy-prod-for-app
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        run: make deploy-prod-for-app
