ci(develop): makeのパスを調整

--- a/.github/workflows/deploy-for-firbase-hosting.yaml
+++ b/.github/workflows/deploy-for-firbase-hosting.yaml
@@ -38,5 +38,5 @@ jobs:
           path: services/front/dev/dist
 
       - name: Deploy nuxt generate to Firebase hosting
-        working-directory: ./services/front/dev
+        working-directory: ./services/front
         run: make deploy-prod-for-app
