--- a/.github/workflows/deploy-for-firbase-hosting.yaml
+++ b/.github/workflows/deploy-for-firbase-hosting.yaml
@@ -15,30 +15,28 @@ jobs:
         with:
           node-version: 12
 
-      #      - name: install
-      #        working-directory: ./services/front/dev
-      #        run: yarn install --non-interactive
-      #
-      #      - name: lint
-      #        working-directory: ./services/front/dev
-      #        run: yarn lint
-      #
-      #      - name: test
-      #        working-directory: ./services/front/dev
-      #        run: yarn test
-      #
-      #      - name: generate nuxt
-      #        working-directory: ./services/front/dev
-      #        run: yarn generate
-      #
-      #      - name: Upload nuxt generate site
-      #        uses: actions/upload-artifact@v2
-      #        with:
-      #          name: nuxt-site
-      #          path: services/front/dev/dist
+      - name: install
+        working-directory: ./services/front/dev
+        run: yarn install --non-interactive
+
+      - name: lint
+        working-directory: ./services/front/dev
+        run: yarn lint
+
+      - name: test
+        working-directory: ./services/front/dev
+        run: yarn test
+
+      - name: generate nuxt
+        working-directory: ./services/front/dev
+        run: yarn generate
+
+      - name: Upload nuxt generate site
+        uses: actions/upload-artifact@v2
+        with:
+          name: nuxt-site
+          path: services/front/dev/dist
 
       - name: Deploy nuxt generate to Firebase hosting
         working-directory: ./services/front
-        run: |-
-          npm install -g firebase-tools
-          make deploy-prod-for-app
+        run: make deploy-prod-for-app
