ci(deploy): 設定だけで反映しないと行けないっぽい

--- a/.github/workflows/deploy-for-firbase-hosting.yaml
+++ b/.github/workflows/deploy-for-firbase-hosting.yaml
@@ -39,6 +39,8 @@ jobs:
 
       - name: Deploy nuxt generate to Firebase hosting
         working-directory: ./services/front
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |-
           npm install -g firebase-tools
           make deploy-prod-for-app
