--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,13 @@
 {
   "extends": ["config:base"],
+  "requiredStatusChecks": null,
   "packageRules": [
     {
       "updateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
+    },
+    {
+      "depTypeList": ["devDependencies"],
       "automerge": true
     }
   ]
